--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ ipython_config.py
 
 # Remove previous ipynb_checkpoints
 #   git rm -r .ipynb_checkpoints/
+
+
+#summary word document
+summary.docx
